--- a/apps.json
+++ b/apps.json
@@ -7,7 +7,7 @@
   {
     "name" : "捕鱼达人2",
     "download" : "9982万",
-    "icon" : "http:\/\/p19.qhimg.com\/dr\/48_48_\/t0101e2931181bb540d.png"
+    "icon" : "http://pic34.nipic.com/20131021/11569127_170602617166_2.jpg"
   },
   {
     "name" : "保卫萝卜",
